@@ -336,6 +336,7 @@ If upgrading from an older release, see the file UPGRADE;
 * (bug 1432) Update Estonian localization
 * (bug 1471) unclosed <p> tag in Danish messages
 * convertLinks script fixes
+* Corrections to template loop detection
 
 
 === Caveats ===
